--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,8 +2,10 @@
 
 USE_CYCLUS("mbmore" "mytest")
 USE_CYCLUS("mbmore" "behavior_functions")
-USE_CYCLUS("mbmore" "enrich_functions")
-USE_CYCLUS("mbmore" "CascadeEnrich")
+USE_CYCLUS("mbmore" "CascadeConfig")
+USE_CYCLUS("mbmore" "StageConfig")
+USE_CYCLUS("mbmore" "CentrifugeConfig")
+#USE_CYCLUS("mbmore" "CascadeEnrich")
 USE_CYCLUS("mbmore" "RandomEnrich")
 USE_CYCLUS("mbmore" "RandomSink")
 USE_CYCLUS("mbmore" "StateInst")
